fixed ResumeFAB not showing up on iPhone

--- a/components/UI/ResumeFAB.module.scss
+++ b/components/UI/ResumeFAB.module.scss
@@ -5,6 +5,7 @@
   z-index: 1000;
   display: flex;
   align-items: center;
+  z-index: 1000;
 }
 
 .fabButton {
